# beetle

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml
beetle/: client.py  constants.py  main.py  schedule.py  sdk.py  settings.py
beetle/api/: __init__.py  openlist.py  task.py
beetle/models/: __init__.py
migrations/beetle/: 0_20250707210704_init.py  1_20251121205540_update.py
tests/: test_client.py  test_sdk.py
web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: app.tsx  index.css  main.tsx
web/src/api/: openlist.ts  request.ts  task.ts
web/src/components/: Card.tsx  ThemeToggle.tsx
web/src/hooks/: useLocalStorage.ts
web/src/services/: api.ts
